--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   stream_transform: ^2.1.0
+  injectable: ^2.3.2
+  get_it: ^7.6.4
+  envied: ^0.3.0+3
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +53,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  injectable_generator:
+  build_runner:
+  envied_generator:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
