--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dev_dependencies:
   injectable_generator:
   build_runner:
   envied_generator:
+  bloc_test: ^9.1.4
+  mocktail: ^1.0.1
+  test: ^1.24.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
